<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bibliotheque</string>
    <string name="title_livres">Livres</string>
    <string name="title_mes_emprunts">Mes emprunts</string>
    <string name="title_add">Ajouter un livre</string>
    <string name="title_modifier">Modifier un livre</string>
    <string name="title_activity_livre_usager">Livre Usager</string>
    <string name="title_activity_livre_gestionaire">Livre Gestionnaire</string>
    <string name="action_settings">Option</string>
    <string name="tv_isbn">ISBN :</string>
    <string name="tv_auteur">Auteur :</string>
    <string name="tv_editeur">Editeur :</string>
    <string name="tv_annee">Annee :</string>
    <string name="tv_description">Description :</string>
    <string name="tv_emprunter_par">Emprunter par :</string>
    <string name="edit_titre">Titre</string>
    <string name="edit_isbn">ISBN</string>
    <string name="edit_auteur">Auteur</string>
    <string name="edit_editeur">Editeur</string>
    <string name="edit_description">Description</string>
    <string name="edit_annee">Annee</string>
    <string name="bt_emprunt">Emprunter</string>
    <string name="bt_rendre">Rendre</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_main">Connexion</string>
    <string name="title_activity_main_activity_gestionnaire">Gestionnaire</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bt_ajout">Ajouter</string>
    <string name="bt_modifier">Modifier</string>
    <string name="bt_supprimer">Supprimer</string>
    <string name="bt_scanner">Scanner</string>
    <string name="bt_connexion">Connexion</string>
    <string name="bt_inscription">Inscription</string>
    <string name="add_inscription">Inscription réussite</string>
    <string name="add_livre">Le livre a bien été ajouté</string>
    <string name="modif_livre">Le livre a bien été modifié</string>
    <string name="supp_livre">Le livre a bien été supprimé</string>
    <string name="emprunt_personne">Personne</string>
    <string name="zxing_title">Installer Barcode Scanner ?</string>
    <string name="zxing_message">Cette application requiert Barcode Scanner. Voulez-vous l\'installer ?</string>
    <string name="zxing_yes">Oui</string>
    <string name="zxing_no">Non</string>
    <string name="probleme_login">Login ou mot de passe incorrect</string>
    <string name="probleme_login_use">Login déjà utilisé</string>
    <string name="probleme_bdd">Problème avec la connexion</string>
    <string name="probleme_isbn">Mauvais format ISBN</string>
    <string name="probleme_date">Mauvais format de date</string>
    <string name="probleme_champs">Tous les champs n\'ont pas été remplis</string>
    <string name="probleme_email">Ceci n\'est pas une adresse email valide</string>
    <string name="message_dialog">Voulez vous vraiment supprimer ce livre ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="message_bienvenue">Bienvenue dans la Bibliotheque\nVeuillez-vous connecter</string>
    <string name="message_inscription">Pas encore inscrit ?</string>
    <string name="edit_login">Login</string>
    <string name="edit_mdp">Mot de passe</string>
    <string name="edit_email">Email</string>
    <string name="edit_nom">Nom</string>
    <string name="edit_prenom">Prenom</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="is_emprunter">Emprunter</string>
    <string name="not_emprunter">Libre</string>
    <string name="default_url">195.154.75.140</string>
    <string name="dialog_url">Editer l\'url du serveur"</string>
    <string name="title_url">URL du serveur</string>

</resources>
