<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.joris.bibliotheque.Main.InscriptionActivity">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inscription_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:visibility="gone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/edit_nom"
        android:id="@+id/edit_nom"
        android:singleLine="true"
        android:inputType="text"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/edit_prenom"
        android:id="@+id/edit_prenom"
        android:singleLine="true"
        android:inputType="text"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/edit_login"
        android:id="@+id/edit_login"
        android:singleLine="true"
        android:inputType="text"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/edit_mdp"
        android:id="@+id/edit_mdp"
        android:singleLine="true"
        android:inputType="text"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/edit_email"
        android:id="@+id/edit_email"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/bt_inscription"
        android:id="@+id/bt_inscription" />

</LinearLayout>

