<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.joris.bibliotheque.Gestionnaire.LivreGestionnaireActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/qui_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_alignParentTop="true"
            android:visibility="gone"
            android:indeterminate="true" />

        <TextView
            android:text="@string/title_livres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/qui_progress_bar"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tv_titre_gestionnaire"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_isbn"
            android:id="@+id/tv1_gestionnaire"
            android:layout_below="@+id/tv_titre_gestionnaire"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_isbn_gestionnaire"
            android:layout_below="@+id/tv_titre_gestionnaire"
            android:layout_toEndOf="@+id/tv1_gestionnaire" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_auteur"
            android:id="@+id/tv2_gestionnaire"
            android:layout_below="@+id/tv1_gestionnaire"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_auteur_gestionnaire"
            android:layout_below="@+id/tv_isbn_gestionnaire"
            android:layout_toEndOf="@+id/tv2_gestionnaire" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_editeur"
            android:id="@+id/tv3_gestionnaire"
            android:layout_below="@+id/tv2_gestionnaire"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_editeur_gestionnaire"
            android:layout_below="@+id/tv_auteur_gestionnaire"
            android:layout_toEndOf="@+id/tv3_gestionnaire" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_annee"
            android:id="@+id/tv4_gestionnaire"
            android:layout_below="@+id/tv3_gestionnaire"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_annee_gestionnaire"
            android:layout_below="@+id/tv_editeur_gestionnaire"
            android:layout_toEndOf="@+id/tv4_gestionnaire" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_description"
            android:id="@+id/tv5_gestionnaire"
            android:layout_below="@+id/tv4_gestionnaire"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_description_gestionnaire"
            android:layout_below="@+id/tv_annee_gestionnaire"
            android:layout_toEndOf="@+id/tv5_gestionnaire" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_emprunter_par"
            android:id="@+id/tv6_gestionnaire"
            android:layout_below="@+id/tv_description_gestionnaire"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_emprunter_par_gestionnaire"
            android:layout_below="@+id/tv_description_gestionnaire"
            android:layout_toEndOf="@+id/tv6_gestionnaire" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:layout_below="@+id/tv_emprunter_par_gestionnaire"
            android:layout_centerHorizontal="true"
            android:weightSum="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/bt_modifier"
                android:id="@+id/bt_modifier" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/bt_supprimer"
                android:id="@+id/bt_supprimer" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
